@@ -121,6 +121,7 @@ libqore_la_SOURCES = \
 	ql_json.cc \
 	ql_crypto.cc \
 	ql_object.cc \
+	ql_file.cc \
 	QC_Socket.cc \
 	QC_Program.cc \
 	QC_File.cc \
