@@ -2,6 +2,10 @@
 	* removed unused (and buggy) MemberList::copy() method
 	* use a map for private object data, removed pviate KeyNode class and
 	  greatly simplified the private KeyList class
+	* added lib/ql_file.cc with is_file(), is_dir(), is_link(), 
+	  is_readable(), etc
+	* added setuid(), seteuid(), setgid(), and setegid() functions to 
+	  lib/ql_lib.cc
 
 2006.12.23: David Nichols
 	* fixed a static memory leak in the OperatorList destructor
